stylised nav bar and fixed issue where avatart would become off centered with nav bar styling.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,14 +16,14 @@
         </div>
         <h1><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
         <p>{{ site.description }}</p>
-        <nav role="navigation">
+        <div class="nav">
           <ul>
             <li class="nav"><a href=" "> About </a></li>
             <li class="nav"><a href=" "> Projects </a></li>
             <li class="nav"><a href="/blog"> Blog </a></li>
             <li class="nav"><a href=" "> Contact </a></li>
           </ul>
-        </nav>
+        </div>
       </header>
     </div>
     <div class="content">
